Мелкие адаптивные сетки (#10)
* Добавляет декоративные сетки

* Добавление адаптивных ширин

* Попытки восстановить сборку

* Наполовину сделан слайдер

* Сделан слайдер на mobile

* Небольшие правки

* Оформление мелких адаптивных сеток

* исправлена ширина интерактивной карты

* исправлена ширина интерактивной карты еще

* Делает слайдер для трех вьюпортов

* Доделки для линтера

* Делает резиновый блок catalog на всех вьюпортах

* Сделан блок contacts с помощью grid

* Доделки по декоративу в catalog

* Настроена адптивная шапка header

* Адаптация блоков catalog add subscribe

* Переделан фон кот

* Сделаны зеленые декоративные линии

* Доделаны декоративные сетки (не Pixel Perfect пока)

* Доделаны декоративные сетки (не Pixel Perfect пока)

* Сделана фиксированная верстка, по центру

* Переделан header под фиксированный контент

* Переделаны декоративные зеленые полоски

--- a/source/styles/blocks/additional-products.scss
+++ b/source/styles/blocks/additional-products.scss
@@ -1,5 +1,13 @@
 .additional-products {
   background-color: #ffffff;
+
+  @media (min-width: $viewport-tablet) {
+    max-width: 800px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    max-width: 1500px;
+  }
 }
 
 .additional-products__title {
@@ -12,6 +20,11 @@
   @media (min-width: $viewport-tablet) {
     font-size: 32px;
     line-height: 32px;
+    padding-left: 40px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    padding-left: 0;
   }
 }
 
@@ -21,12 +34,57 @@
   flex-direction: column;
   gap: 32px;
   margin-bottom: 54px;
+
+  @media (min-width: $viewport-tablet) {
+    max-width: 800px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    max-width: 1000px;
+    margin-top: 12px;
+  }
 }
 
 .additional-products__item {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: -13px;
+    height: 1px;
+    width: 100%;
+    background-color: #cdcdcd;
+  }
+
   @media (min-width: $viewport-tablet) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    row-gap: 25px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.additional-products__item:last-child::after {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 120px;
+  height: 1px;
+  width: 100%;
+  background-color: #cdcdcd;
+
+  @media (min-width: $viewport-tablet) {
+    top: 100px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    top: 60px;
   }
 }
 
@@ -42,6 +100,7 @@
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
     line-height: 20px;
+    margin-bottom: 0;
   }
 }
 
@@ -53,6 +112,14 @@
   @media (min-width: $viewport-tablet) {
     justify-content: end;
     gap: 49px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    justify-content: space-between;
+    gap: 112px;
+    margin-right: 40px;
+    min-width: 285px;
   }
 }
 
@@ -92,6 +159,11 @@
       left: 78px;
       top: 57px;
     }
+
+    @media (min-width: $viewport-desktop) {
+      left: 50%;
+      top: 57px;
+    }
   }
 
   @media (min-width: $viewport-tablet) {
@@ -106,6 +178,9 @@
 
   @media (min-width: $viewport-desktop) {
     background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-desktop@1x.jpg") 1x, url("../../images/cat-case-desktop@2x.jpg") 2x);
+    width: 245px;
+    min-height: 288px;
+    margin-left: 81px;
   }
 }
 
@@ -120,5 +195,18 @@
   @media (min-width: $viewport-tablet) {
     padding: 71px  125px 69px 421px;
     text-align: left;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    padding: 185px 42px 43px;
+    text-align: center;
+    width: 161px;
+  }
+}
+
+.additional-products__wrapper {
+  @media (min-width: $viewport-desktop) {
+    display: flex;
+    justify-content: space-between;
   }
 }
