--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -1,3 +1,7 @@
+.how-it-works {
+  box-sizing: border-box;
+  min-width: 320px;
+}
 
 .how-it-works__title {
   @include mp-reset();
@@ -7,6 +11,7 @@
   line-height: 40px;
   margin-bottom: 40px;
   margin-top: 20px;
+  align-self: start;
 
   @media (min-width: $viewport-tablet) {
     font-size: 60px;
@@ -21,10 +26,14 @@
   counter-reset: list-number 0;
   gap: 6.25vw;
   width: 100%;
+  min-width: 280px;
+  max-width: 520px;
 
   @media (min-width: $viewport-tablet) {
     flex-flow: wrap;
     gap: 37px 90px;
+    max-width: 1439px;
+    margin: 0 auto;
   }
 
   @media (min-width: $viewport-desktop) {
@@ -36,7 +45,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  width: 88vw;
+  width: 100%;
   counter-increment: list-number 1;
 
   &::before {
@@ -96,7 +105,8 @@
   color: #444444;
   margin: 0;
   margin-left: 80px;
-  width: 72%;
+  width: 100%;
+  min-width: 200px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 16px;
