--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -17,12 +17,13 @@
 @import "./blocks/button-general.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/how-it-works.scss";
-@import "./blocks/live-example-container.scss";
 @import "./blocks/live-example.scss";
-@import "./blocks/map.scss";
+@import "./blocks/contacts.scss";
 @import "./blocks/main-footer.scss";
+@import "./blocks/main-catalog.scss";
 @import "./blocks/products.scss";
 @import "./blocks/additional-products.scss";
+@import "./blocks/slider.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/socials.scss";
-
+@import "./blocks/title-greenline.scss";
