--- a/source/styles/blocks/button-general.scss
+++ b/source/styles/blocks/button-general.scss
@@ -1,56 +1,88 @@
 .button-general {
   color: #ffffff;
   background-color: #68b738;
+  text-align: center;
+  padding-inline: 30px;
+
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
 
 .button-general--find-programm {
   margin-top: 3px;
-  width: 100%;
-  padding: 10px 44px;
-  text-align: center;
+  min-width: 280px;
+  padding-block: 10px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
     line-height: 26px;
     z-index: 1;
     width: 244px;
-    padding: 14px 26px;
+    padding-block: 14px;
   }
 }
 
-.button-general--order {
+.button-general--order-catalog {
   grid-area: 3 / 1 / 4 / 4;
-  padding: 10px 109px;
+  padding-block: 10px;
+  min-width: 250px;
 
   @media (min-width: $viewport-tablet) {
-    padding: 10px 94px;
     grid-column: 1 / -1;
     padding-block: 10px;
-    text-align: center;
   }
 
   @media (min-width: $viewport-desktop) {
     padding: 10px 53px;
+    min-width: 0;
   }
 }
 
 .button-general--show-all {
   grid-area: 3 / 1 / 4 / 4;
-  padding: 10px 95px;
+  padding: 10px 20px;
   background-color: #f2f2f2;
   color: #444444;
+
+  &:hover {
+    background-color: #ebebeb;
+  }
+
+  &:active {
+    color: #444444;
+  }
+}
+
+.button-general--order-add {
+  grid-area: 2 / 1 / 3 / 3;
+  padding-block: 10px;
+
+  @media (min-width: $viewport-desktop) {
+    grid-area: 1 / 3 / 2 / 4;
+  }
 }
 
 .button-general--subscribe {
   border: none;
-  padding: 15px 81px;
+  padding: 15px 30px;
   font-size: 20px;
   line-height: 26px;
-  height: 56px;
   font-family: $headers-font;
   font-weight: 400;
   color: #ffffff;
   background-color: #68b738;
   text-transform: uppercase;
   cursor: pointer;
+  width: 280px;
+  min-height: 56px;
+  box-sizing: border-box;
+
+  @media (min-width: $viewport-tablet) {
+    width: 256px;
+  }
 }
