--- a/source/styles/blocks/container.scss
+++ b/source/styles/blocks/container.scss
@@ -1,14 +1,16 @@
 .container {
-  padding-inline: 6%;
-  width: 88%;
+  padding-inline: 20px;
+  box-sizing: border-box;
+  width: 320px;
+  margin: 0 auto;
 
   @media (min-width: $viewport-tablet) {
-    width: 92vw;
-    padding-inline: 4%;
+    padding-inline: 30px;
+    width: 768px;
   }
 
   @media (min-width: $viewport-desktop) {
-    width: 85vw;
-    padding-inline: 8%;
+    padding-inline: 110px;
+    width: 1440px;
   }
 }
