--- a/source/styles/blocks/live-example.scss
+++ b/source/styles/blocks/live-example.scss
@@ -1,19 +1,28 @@
 .live-example {
-  position: relative;
-  font-family: $headers-font;
   padding-top: 25px;
   padding-bottom: 40px;
-  width: 100%;
-  box-sizing: border-box;
+  background-color: #eaeaea;
+
+  @media (min-width: $viewport-tablet) {
+    background-image: linear-gradient(#ffffff 619px, #eaeaea 619px);
+  }
+
+  @media (min-width: $viewport-desktop) {
+    background-image: linear-gradient(#ffffff 150px, #f2f2f2 150px);
+  }
+}
+
+.live-example__wrapper {
+  position: relative;
+  font-family: $headers-font;
 
   &::before {
     @media (min-width: $viewport-tablet) and (max-width: $viewport-desktop) {
       position: absolute;
       content: "";
-      top: -20px;
       left: -30px;
       display: block;
-      width: $viewport-tablet;
+      width: calc(100% + 30px);
       height: 1px;
       background-color: #e6e6e6;
     }
@@ -48,6 +57,7 @@
   color: #444444;
   width: 100%;
   margin-bottom: 20px;
+  min-width: 280px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 16px;
@@ -60,7 +70,7 @@
   }
 }
 
-.live-example__wrapper {
+.live-example__facts-wrapper {
   margin-bottom: 20px;
 
   @media (min-width: $viewport-tablet) {
@@ -68,6 +78,7 @@
     align-items: center;
     gap: 167px;
     justify-content: space-between;
+    margin-bottom: 104px;
   }
 
   @media (min-width: $viewport-desktop) {
@@ -184,45 +195,5 @@
 }
 
 .live-example__slider {
-  position: relative;
-  width: 280px;
   margin: 0 auto;
-
-  @media (min-width: $viewport-tablet) {
-    width: 560px;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    grid-area: 1 / 2 / 4 / 3;
-  }
-}
-
-.live-example__slider-range {
-  position: absolute;
-  top: 10px;
-  left: 30px;
-}
-
-.live-example__slider-bar {
-  position: absolute;
-  width: 4px;
-  height: 256px;
-  border-radius: 2px;
-  background-color: #666666;
-}
-
-.live-example__toggle {
-  position: absolute;
-  top: 100px;
-  left: -18px;
-  border: none;
-  background-color: transparent;
-  background-image: url("../../icons/stack.svg#live-example-toggle");
-  background-repeat: no-repeat;
-  width: 40px;
-  height: 40px;
-}
-
-.live-example__slider-image-two {
-  display: none;
 }
