--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -1,17 +1,11 @@
 .main-footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 40px;
   background-color: #f2f2f2;
   padding-block: 40px;
-  width: 100%;
+  padding-inline: 20px;
   box-sizing: border-box;
+  width: 100%;
 
   @media (min-width: $viewport-tablet) {
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 0;
     padding-inline: 30px;
   }
 
@@ -20,33 +14,22 @@
   }
 }
 
-.main-footer__socials {
-  position: relative;
-  padding-bottom: 20px;
-  width: 100%;
+.main-footer__wrapper {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  gap: 40px;
 
-  &::before,
-  &::after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 1px;
-    background-color: #d9d9d9;
-
-    @media (min-width: $viewport-tablet) {
-      display: none;
-    }
+  @media (min-width: $viewport-tablet) {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0;
+    width: 708px;
+    margin: 0 auto;
   }
 
-  &::before {
-    top: -20px;
-  }
-
-  &::after {
-    top: 42px;
+  @media (min-width: $viewport-desktop) {
+    width: 1220px;
   }
 }
 
@@ -67,12 +50,13 @@
 .main-footer__academy-logo-link {
   display: flex;
   align-items: center;
-  width: 280px;
+  gap: 23px;
   justify-content: space-between;
   text-decoration: none;
   font-size: 16px;
   line-height: 16px;
   color: #444444;
+  width: 280px;
 
   &:hover .main-footer__academy-logo-svg {
     fill: #68b738;
@@ -85,6 +69,10 @@
   @media (min-width: $viewport-tablet) {
     width: 168px;
   }
+}
+
+.main-footer__academy-logo-text-link {
+  width: 114px;
 }
 
 .main-footer__academy-logo-svg {
