--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -14,6 +14,11 @@
   @media (min-width: $viewport-tablet) {
     font-size: 32px;
     line-height: 32px;
+    padding-left: 40px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    padding-left: 0;
   }
 }
 
@@ -21,9 +26,15 @@
   display: flex;
   flex-direction: column;
 
-  @media (min-width: $viewport-desktop) {
+  @media (min-width: $viewport-tablet) {
     display: grid;
-    grid-template-columns: 376px 256px;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto;
+    width: 632px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    width: 752px;
   }
 }
 
@@ -31,25 +42,54 @@
   font-size: 16px;
   line-height: 24px;
   margin-bottom: 24px;
+  text-align: center;
 
   @media (min-width: $viewport-tablet) {
+    grid-area: 1 / 1 / 2 / 3;
     font-size: 24px;
     line-height: 32px;
+    width: 632px;
   }
 
   @media (min-width: $viewport-desktop) {
     grid-column: 1 / -1;
-    text-align: center;
+    width: 752px;
   }
 }
 
 .subscribe__input {
   margin-bottom: 16px;
-  border: 1px solid #cdcdcd;
+  border: 1px solid #e7e7e7;
+  box-sizing: border-box;
   padding: 13px;
   font-family: $headers-font;
   font-size: 20px;
   line-height: 30px;
   text-transform: uppercase;
   color: #444444;
+  min-width: 280px;
+  height: 56px;
+  outline: none;
+
+  &::placeholder {
+    opacity: 1;
+  }
+
+  &:hover {
+    border-color: #cdcdcd;
+  }
+
+  &:focus-visible {
+    border-width: 2px;
+    border-color: #444444;
+  }
+
+  @media (min-width: $viewport-tablet) {
+    margin-bottom: 0;
+    min-width: 376px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    min-width: 496px;
+  }
 }
