--- a/source/styles/blocks/additional-products.scss
+++ b/source/styles/blocks/additional-products.scss
@@ -15,16 +15,21 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
-  margin: 25px 0 49px;
+  margin: 0;
+  margin-bottom: 49px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 32px;
     line-height: 32px;
     padding-left: 40px;
+    margin-bottom: 106px;
   }
 
   @media (min-width: $viewport-desktop) {
     padding-left: 0;
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 94px;
   }
 }
 
@@ -34,14 +39,17 @@
   flex-direction: column;
   gap: 32px;
   margin-bottom: 54px;
+  width: 100%;
 
   @media (min-width: $viewport-tablet) {
-    max-width: 800px;
+    gap: 54px;
+    margin-bottom: 98px;
   }
 
   @media (min-width: $viewport-desktop) {
-    max-width: 1000px;
-    margin-top: 12px;
+    width: 896px;
+    gap: 30px;
+    margin-bottom: 0;
   }
 }
 
@@ -56,17 +64,27 @@
     height: 1px;
     width: 100%;
     background-color: #cdcdcd;
+
+    @media (min-width: $viewport-tablet) {
+      top: -26px;
+    }
+
+    @media (min-width: $viewport-desktop) {
+      top: -14px;
+    }
   }
 
   @media (min-width: $viewport-tablet) {
+    padding-inline: 38px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    row-gap: 25px;
+    row-gap: 22px;
   }
 
   @media (min-width: $viewport-desktop) {
     grid-template-columns: repeat(3, 1fr);
+    padding-inline: 0;
   }
 }
 
@@ -74,17 +92,17 @@
   content: "";
   position: absolute;
   display: block;
-  top: 120px;
+  top: 116px;
   height: 1px;
   width: 100%;
   background-color: #cdcdcd;
 
   @media (min-width: $viewport-tablet) {
-    top: 100px;
+    top: 112px;
   }
 
   @media (min-width: $viewport-desktop) {
-    top: 60px;
+    top: 58px;
   }
 }
 
@@ -102,6 +120,10 @@
     line-height: 20px;
     margin-bottom: 0;
   }
+
+  @media (min-width: $viewport-desktop) {
+    min-width: 325px;
+  }
 }
 
 .additional-products__info {
@@ -111,15 +133,16 @@
 
   @media (min-width: $viewport-tablet) {
     justify-content: end;
-    gap: 49px;
     margin-bottom: 0;
+    padding-top: 3px;
+    padding-right: 3px;
   }
 
   @media (min-width: $viewport-desktop) {
     justify-content: space-between;
     gap: 112px;
-    margin-right: 40px;
-    min-width: 285px;
+    width: 285px;
+    padding-top: 8px;
   }
 }
 
@@ -132,6 +155,17 @@
   @media (min-width: $viewport-tablet) {
     font-size: 16px;
     line-height: 20px;
+  }
+}
+
+.additional-products__cost {
+  @media (min-width: $viewport-tablet) {
+    width: 91px;
+    text-align: right;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    width: auto;
   }
 }
 
@@ -156,7 +190,7 @@
     background-size: 100%;
 
     @media (min-width: $viewport-tablet) {
-      left: 78px;
+      left: 119px;
       top: 57px;
     }
 
@@ -177,6 +211,9 @@
   }
 
   @media (min-width: $viewport-desktop) {
+    position: absolute;
+    right: 0;
+    top: -13px;
     background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-desktop@1x.jpg") 1x, url("../../images/cat-case-desktop@2x.jpg") 2x);
     width: 245px;
     min-height: 288px;
@@ -189,7 +226,7 @@
   line-height: 20px;
   color: #ffffff;
   margin: 0;
-  padding: 187px 60px 43px;
+  padding: 187px 20px 43px;
   text-align: center;
 
   @media (min-width: $viewport-tablet) {
@@ -206,6 +243,7 @@
 
 .additional-products__wrapper {
   @media (min-width: $viewport-desktop) {
+    position: relative;
     display: flex;
     justify-content: space-between;
   }
