--- a/source/styles/blocks/button-general.scss
+++ b/source/styles/blocks/button-general.scss
@@ -2,7 +2,7 @@
   color: #ffffff;
   background-color: #68b738;
   text-align: center;
-  padding-inline: 30px;
+  padding-inline: 10px;
 
   &:hover {
     background-color: #5eaa2f;
@@ -14,9 +14,9 @@
 }
 
 .button-general--find-programm {
-  margin-top: 3px;
-  min-width: 280px;
+  width: 280px;
   padding-block: 10px;
+  box-sizing: border-box;
 
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
@@ -24,6 +24,14 @@
     z-index: 1;
     width: 244px;
     padding-block: 14px;
+    grid-area: 3 / 1 / 4 / 2;
+    margin-left: 90px;
+    margin-top: 29px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    margin-top: 0;
+    margin-left: 80px;
   }
 }
 
@@ -48,6 +56,7 @@
   padding: 10px 20px;
   background-color: #f2f2f2;
   color: #444444;
+  width: 280px;
 
   &:hover {
     background-color: #ebebeb;
@@ -55,6 +64,14 @@
 
   &:active {
     color: #444444;
+  }
+
+  @media (min-width: $viewport-tablet) {
+    width: 250px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    width: 169px;
   }
 }
 
@@ -64,6 +81,9 @@
 
   @media (min-width: $viewport-desktop) {
     grid-area: 1 / 3 / 2 / 4;
+    width: 244px;
+    justify-self: end;
+    margin-top: 2px;
   }
 }
 
