--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,7 +1,6 @@
 .catalog {
   font-family: $headers-font;
   background-color: inherit;
-  box-sizing: border-box;
 }
 
 .catalog__list {
@@ -25,7 +24,7 @@
 .catalog__item {
   position: relative;
   background-color: #f2f2f2;
-  padding: 30px 20px 18px;
+  padding: 30px 20px 22px;
   width: 100%;
   box-sizing: border-box;
 
@@ -50,7 +49,7 @@
     @media (min-width: $viewport-desktop) {
       width: 100px;
       height: 100px;
-      top: 41px;
+      top: 47px;
       left: 52px;
     }
   }
@@ -64,12 +63,12 @@
   }
 
   @media (min-width: $viewport-tablet) {
-    padding: 77px 52px 53px;
+    padding: 77px 52px 57px;
   }
 
   @media (min-width: $viewport-desktop) {
     width: 47%;
-    padding: 77px 0 55px 52px;
+    padding: 77px 0 59px 52px;
   }
 }
 
@@ -83,7 +82,7 @@
   @media (min-width: $viewport-tablet) {
     width: 140px;
     height: 194px;
-    top: 70px;
+    top: 80px;
     left: initial;
     right: 93px;
   }
@@ -131,6 +130,8 @@
     font-size: 36px;
     line-height: 36px;
     padding: 0;
+    margin-bottom: 24px;
+    max-width: 340px;
   }
 
   @media (min-width: $viewport-desktop) {
@@ -143,15 +144,14 @@
   font-family: $general-font;
   line-height: 18px;
   color: #444444;
-  width: 100%;
-  min-width: 227px;
+  width: 227px;
   margin-bottom: 19px;
 
   &::after {
     content: "";
     top: -19px;
     display: block;
-    width: 100%;
+    width: 240px;
     height: 1px;
     background-color: #d9d9d9;
     margin-top: 23px;
@@ -165,12 +165,13 @@
     font-size: 16px;
     line-height: 24px;
     color: #000000;
-    min-width: 340px;
-    width: 51%;
+    margin-bottom: 52px;
+    width: 340px;
   }
 
   @media (min-width: $viewport-desktop) {
-    width: 80%;
+    width: 457px;
+    margin-bottom: 27px;
   }
 }
 
@@ -183,11 +184,14 @@
   line-height: 16px;
   text-decoration: none;
   color: #000000;
-  width: 170px;
+  min-width: 170px;
+  max-width: calc(100% - 24px);
 
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
     line-height: 30px;
+    gap: 25px;
+    max-width: 340px;
   }
 
   &:active {
@@ -196,6 +200,7 @@
 
   &::after {
     content: "";
+    flex-shrink: 0;
     width: 24px;
     height: 12px;
     mask-image: url("../../icons/stack.svg#catalog-arrow-small");
