--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -7,16 +7,19 @@
   background-repeat: no-repeat;
   background-position: center 0;
   background-size: auto 63%;
+  padding-top: 27px;
 
   @media (min-width: $viewport-tablet) {
     align-items: start;
-    padding-bottom: 526px;
+    padding-top: 65px;
     background-image: none;
+    display: grid;
+    grid-template-rows: repeat(4, auto);
   }
 
   @media (min-width: $viewport-desktop) {
-    padding-left: 80px;
-    padding-bottom: 169px;
+    grid-template-rows: repeat(4, auto);
+    padding-top: 29px;
   }
 }
 
@@ -27,18 +30,23 @@
   line-height: 36px;
   text-align: center;
   margin-bottom: 25px;
-  margin-top: 27px;
+  padding-inline: 20px;
+  z-index: 1;
 
   @media (min-width: $viewport-tablet) {
     font-size: 60px;
     line-height: 60px;
     color: #000000;
-    padding-top: 65px;
     text-align: left;
+    margin-bottom: 40px;
+    padding-left: 90px;
   }
 
   @media (min-width: $viewport-desktop) {
-    padding-top: 83px;
+    padding-top: 81px;
+    padding-left: 80px;
+    grid-area: 1 / 1 / 2 / 2;
+    max-width: 500px;
   }
 }
 
@@ -49,26 +57,43 @@
   text-align: center;
   margin: 0;
   margin-bottom: 29px;
+  padding-inline: 20px;
+  z-index: 1;
 
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
     line-height: 20px;
     color: #000000;
-    margin-bottom: 50px;
+    margin-bottom: 21px;
+    text-align: left;
+    padding-left: 90px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    margin-bottom: 52px;
+    padding-left: 80px;
+    grid-area: 2 / 1 / 3 / 2;
+    max-width: 500px;
+  }
+}
+
+.hero__image-wrap {
+  @media (min-width: $viewport-tablet) {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    grid-area: 1 / 1 / 5 / 2;
+    justify-self: end;
   }
 }
 
 .hero__image {
   display: block;
+  margin-bottom: 3px;
 
   @media (min-width: $viewport-tablet) {
-    position: absolute;
-    top: 366px;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    top: 29px;
-    left: 450px;
+    margin-bottom: 0;
   }
 }
 
