--- a/source/styles/blocks/live-example.scss
+++ b/source/styles/blocks/live-example.scss
@@ -4,11 +4,15 @@
   background-color: #eaeaea;
 
   @media (min-width: $viewport-tablet) {
-    background-image: linear-gradient(#ffffff 619px, #eaeaea 619px);
+    background-color: #ffffff;
+    padding-bottom: 0;
   }
 
   @media (min-width: $viewport-desktop) {
-    background-image: linear-gradient(#ffffff 150px, #f2f2f2 150px);
+    display: flex;
+    gap: 160px;
+    padding-bottom: 75px;
+    background-image: linear-gradient(#ffffff 163px, #f2f2f2 163px);
   }
 }
 
@@ -17,20 +21,23 @@
   font-family: $headers-font;
 
   &::before {
-    @media (min-width: $viewport-tablet) and (max-width: $viewport-desktop) {
+    @media (min-width: $viewport-tablet) and (max-width: 1439px) {
       position: absolute;
       content: "";
-      left: -30px;
+      top: -45px;
+      left: calc((100vw - $viewport-tablet) / 2 * -1);
       display: block;
-      width: calc(100% + 30px);
+      width: 100vw;
       height: 1px;
       background-color: #e6e6e6;
     }
   }
 
   @media (min-width: $viewport-desktop) {
-    display: grid;
-    grid-template-columns: 660px 560px;
+    padding-right: 0;
+    padding-left: calc((100vw - 1220px) / 2);
+    margin: 0;
+    width: calc(((100vw - 1220px) / 2) + 500px);
   }
 }
 
@@ -49,6 +56,7 @@
 
   @media (min-width: $viewport-desktop) {
     margin-bottom: 146px;
+    max-width: 500px;
   }
 }
 
@@ -56,6 +64,7 @@
   font-family: $general-font;
   color: #444444;
   width: 100%;
+  margin: 0;
   margin-bottom: 20px;
   min-width: 280px;
 
@@ -67,6 +76,7 @@
 
   @media (min-width: $viewport-desktop) {
     margin-bottom: 69px;
+    width: 433px;
   }
 }
 
@@ -76,43 +86,46 @@
   @media (min-width: $viewport-tablet) {
     display: flex;
     align-items: center;
-    gap: 167px;
-    justify-content: space-between;
     margin-bottom: 104px;
+    gap: 80px;
   }
 
   @media (min-width: $viewport-desktop) {
     flex-direction: column;
     align-items: start;
-    gap: 60px;
+    gap: 62px;
+    margin-bottom: 0;
   }
 }
 
 .live-example__facts-list {
   @include list-style-reset();
   display: flex;
+  flex-wrap: wrap;
   gap: 32px;
   margin-bottom: 34px;
 
   @media (min-width: $viewport-tablet) {
     margin-bottom: 0;
+    gap: 43px;
+    width: 500px;
   }
 }
 
 .live-example__facts-item {
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
   border: 1px solid #cdcdcd;
   border-radius: 3px;
   width: 124px;
-  height: 56px;
+  min-height: 56px;
   box-sizing: border-box;
+  padding: 15px;
 
   @media (min-width: $viewport-tablet) {
     width: 162px;
-    height: 72px;
+    min-height: 72px;
   }
 }
 
@@ -133,8 +146,8 @@
     font-size: 14px;
     line-height: 14px;
     width: 114px;
-    top: 63px;
-    left: 24px;
+    top: 62px;
+    left: 22px;
     background-color: #ffffff;
   }
 
@@ -166,14 +179,18 @@
   margin: 0 auto;
 
   @media (min-width: $viewport-tablet) {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 9px;
     margin: 0;
   }
 
   @media (min-width: $viewport-desktop) {
-    margin: 0;
-    display: flex;
     width: auto;
-    gap: 63px;
+    flex-direction: row;
+    align-items: start;
+    gap: 65px;
   }
 }
 
@@ -194,6 +211,28 @@
   }
 }
 
+.live-example__cost-title {
+  @media (min-width: $viewport-tablet) {
+    max-width: 174px;
+  }
+}
+
+.live-example__cost-price {
+  @media (min-width: $viewport-tablet) {
+    max-width: 90px;
+  }
+}
+
 .live-example__slider {
-  margin: 0 auto;
+  @media (min-width: $viewport-tablet) {
+    background-image: linear-gradient(#ffffff 151px, #eaeaea 151px);
+    padding-bottom: 101px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    background-image: linear-gradient(#ffffff 138px, #f2f2f2 138px);
+    padding-top: 0;
+    padding-bottom: 0;
+    width: 560px;
+  }
 }
