--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -1,13 +1,28 @@
 .nav {
+  position: relative;
   display: none;
 
+  @media (min-width: $viewport-tablet) {
+    min-width: 451px;
+    display: block;
+  }
+
   @media (min-width: $viewport-desktop) {
-    width: calc(50% - 134px);
+    max-width: 600px;
   }
 }
 
 .nav--open {
   display: block;
+}
+
+.nav--js {
+  @media (max-width: 767px) {
+    position: absolute;
+    background-color: #ffffff;
+    z-index: 2;
+    width: 100vw;
+  }
 }
 
 .nav__list {
@@ -18,11 +33,8 @@
 
   @media (min-width: $viewport-tablet) {
     flex-flow: wrap;
-    justify-content: end;
-  }
-
-  @media (min-width: $viewport-tablet) {
-    min-width: 480px;
+    justify-content: start;
+    gap: 5px;
   }
 }
 
@@ -33,6 +45,7 @@
 }
 
 .nav__link {
+  position: relative;
   display: block;
   text-decoration: none;
   text-transform: uppercase;
@@ -40,7 +53,7 @@
   font-size: 20px;
   line-height: 20px;
   color: #000000;
-  padding: 22px 10px 24px;
+  padding: 22px 10px 23px;
 
   &:hover,
   &:focus-visible {
@@ -54,6 +67,7 @@
   @media (min-width: $viewport-tablet) {
     font-size: 18px;
     line-height: 24px;
+    padding: 13px 14px;
   }
 
   @media (min-width: $viewport-desktop) {
@@ -64,11 +78,10 @@
 }
 
 .nav__item {
-  width: 100%;
   text-align: center;
 
-  @media (min-width: $viewport-tablet) {
-    width: auto;
+  &:last-child .nav__link {
+    padding-right: 0;
   }
 }
 
@@ -88,11 +101,17 @@
 .nav__link-current::after {
   @media (min-width: $viewport-tablet) {
     content: "";
-    display: block;
-    width: 100%;
+    position: absolute;
+    width: calc(100% - 30px);
     height: 2px;
+    left: 15px;
+    top: 38px;
     background-color: #68b738;
     margin-top: 8px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    top: 42px;
   }
 }
 
