--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: grid;
   width: 280px;
+  margin: 0 auto;
 
   @media (min-width: $viewport-tablet) {
     width: 560px;
@@ -17,17 +18,18 @@
   display: block;
   padding: 0;
   top: 0;
-  left: 140px;
+  left: 137px;
   border: none;
+  border-radius: 2px;
   background-color: #666666;
   width: 4px;
-  height: 257px;
+  height: 256px;
   z-index: 4;
 
   &::before {
     content: "";
     position: absolute;
-    top: 113px;
+    top: 119px;
     left: -10px;
     background-color: #666666;
     mask-image: url("../../icons/stack.svg#live-example-toggle");
@@ -37,7 +39,7 @@
     z-index: 5;
 
     @media (min-width: $viewport-tablet) {
-      top: 249px;
+      top: 247px;
     }
   }
 
@@ -46,12 +48,13 @@
     position: absolute;
     width: 40px;
     height: 40px;
-    top: 100px;
-    left: -20px;
+    top: 108px;
+    left: -18px;
     background-color: #ffffff;
     border: 2px solid  #666666;
     border-radius: 50%;
     z-index: 1;
+    box-sizing: border-box;
 
     @media (min-width: $viewport-tablet) {
       top: 236px;
@@ -96,10 +99,10 @@
   background-color: #eaeaea;
 
   @media (min-width: $viewport-tablet) {
-    background-image: linear-gradient(#ffffff 195px, #eaeaea 195px);
+    background-image: linear-gradient(#ffffff 151px, #eaeaea 151px);
   }
 
   @media (min-width: $viewport-desktop) {
-    background-image: linear-gradient(#ffffff 125px, #f2f2f2 125px);
+    background-image: linear-gradient(#ffffff 138px, #f2f2f2 138px);
   }
 }
