--- a/source/styles/blocks/socials.scss
+++ b/source/styles/blocks/socials.scss
@@ -1,17 +1,14 @@
 .socials {
   display: flex;
-  gap: 24px;
-  position: relative;
-  padding-bottom: 20px;
+  gap: 20px 24px;
   width: 100%;
   align-items: center;
   justify-content: center;
-
-  @include list-style-reset();
+  flex-wrap: wrap;
+  padding: 0;
 
   &::before,
   &::after {
-    position: absolute;
     content: "";
     width: 100%;
     height: 1px;
@@ -21,28 +18,22 @@
       display: none;
     }
   }
-
-  &::before {
-    top: -20px;
-  }
-
-  &::after {
-    top: 42px;
-  }
 }
 
 .socials__item {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 22px;
+  width: 28px;
 }
 
 .socials__link {
   &::before {
     content: "";
     display: block;
-    width: 28px;
-    height: 22px;
+    width: 100%;
+    height: 100%;
     mask-position: center;
     background-color: #666666;
   }
