--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -22,6 +22,7 @@
 @import "./blocks/main-footer.scss";
 @import "./blocks/main-catalog.scss";
 @import "./blocks/products.scss";
+@import "./blocks/products-card.scss";
 @import "./blocks/additional-products.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/subscribe.scss";
