--- a/source/styles/blocks/button-burger.scss
+++ b/source/styles/blocks/button-burger.scss
@@ -4,6 +4,7 @@
   background-color: transparent;
   cursor: pointer;
   background-repeat: no-repeat;
+  flex-shrink: 0;
 
   &:hover,
   &:focus-visible {
@@ -22,11 +23,14 @@
 .button-burger--close {
   background-image: url("../../icons/stack.svg#burger-close");
   width: 18px;
-  height: 18px;
+  height: 19px;
+  margin-left: 73px;
+  margin-bottom: 2px;
 }
 
 .button-burger--open {
   background-image: url("../../icons/stack.svg#burger-open");
   width: 24px;
   height: 24px;
+  margin-left: 65px;
 }
