--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -20,6 +20,7 @@
   @media (min-width: $viewport-desktop) {
     grid-template-rows: repeat(4, auto);
     padding-top: 29px;
+    width: 1000px;
   }
 }
 
