--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -15,7 +15,6 @@
 
 .page__catalog {
   margin-bottom: 20px;
-  z-index: 1;
 
   @media (min-width: $viewport-tablet) {
     margin-bottom: 45px;
@@ -28,18 +27,36 @@
 }
 
 .page__how-it-works {
-  margin-bottom: 49px;
+  margin-bottom: 25px;
 
   @media (min-width: $viewport-tablet) {
-    margin-bottom: 65px;
+    margin-bottom: 41px;
   }
 
   @media (min-width: $viewport-desktop) {
-    margin-bottom: 45px;
+    margin-bottom: 21px;
+  }
+}
+
+.page__live-example {
+  position: relative;
+
+  &::before {
+    @media (min-width: $viewport-tablet) and (max-width: 1439px) {
+      content: "";
+      position: absolute;
+      top: -19px;
+      display: block;
+      width: 100%;
+      height: 1px;
+      background-color: #e6e6e6;
+    }
   }
 }
 
 .page__products {
+  margin-bottom: 24px;
+
   @media (min-width: $viewport-tablet) {
     margin-bottom: 74px;
   }
