--- a/source/styles/blocks/products.scss
+++ b/source/styles/blocks/products.scss
@@ -43,10 +43,11 @@
   }
 }
 
-.products__list {
+.products__card-list {
   @include list-style-reset();
   display: flex;
   flex-direction: column;
+  gap: 25px;
   width: 100%;
 
   @media (min-width: $viewport-tablet) {
@@ -59,285 +60,4 @@
   @media (min-width: $viewport-desktop) {
     gap: 63px 80px;
   }
-}
-
-.products__item {
-  position: relative;
-  min-width: 280px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  box-sizing: border-box;
-  padding-bottom: 20px;
-  margin-bottom: 25px;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: -21px;
-    left: calc(((100vw - 280px) / 2) * -1);
-    width: 100vw;
-    height: 1px;
-    background-color: #ebebeb;
-
-    @media (min-width: $viewport-tablet) {
-      display: none;
-    }
-  }
-
-  @media (min-width: $viewport-tablet) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-image: linear-gradient(#ffffff 81px, #f2f2f2 81px);
-    min-width: 0;
-    width: 324px;
-    padding: 10px 37px 40px;
-    margin-bottom: 0;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    width: 245px;
-  }
-}
-
-.products__item--more {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
-  background: none;
-  padding-bottom: 0;
-
-  &::after {
-    content: "";
-    height: 1px;
-    left: calc(((100vw - 280px) / 2) * -1);
-    width: 100vw;
-    background-color: #ebebeb;
-    margin-top: 23px;
-
-    @media (min-width: $viewport-tablet) {
-      display: none;
-    }
-  }
-
-  @media (min-width: $viewport-tablet) {
-    border: 2px solid #f2f2f2;
-    box-sizing: border-box;
-    align-self: end;
-    padding-top: 0;
-    padding-bottom: 38px;
-  }
-}
-
-.products__image-link {
-  grid-area: 1 / 1 / 3 / 2;
-
-  @media (min-width: $viewport-tablet) {
-    margin-bottom: 22px;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    margin-bottom: 10px;
-  }
-}
-
-.products__title-link,
-.products__more-title {
-  font-family: $headers-font;
-  font-weight: 400;
-  text-decoration: none;
-  color: #222222;
-  font-size: 16px;
-  line-height: 20px;
-  text-transform: uppercase;
-  padding-top: 2px;
-
-  @media (min-width: $viewport-tablet) {
-    font-size: 20px;
-    line-height: 24px;
-  }
-}
-
-.products__title-link {
-  width: 76px;
-  margin-bottom: 14px;
-  grid-area: 1 / 2 / 2 / 3;
-
-  @media (min-width: $viewport-tablet) {
-    text-align: center;
-    width: 135px;
-    margin-bottom: 18px;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    margin-bottom: 23px;
-  }
-}
-
-.products__item-details,
-.products__item-detail,
-.products__more-text {
-  @include mp-reset();
-  font-size: 12px;
-  line-height: 16px;
-  color: #444444;
-
-  @media (min-width: $viewport-tablet) {
-    font-size: 16px;
-    line-height: 20px;
-  }
-}
-
-.products__item-details {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-area: 2 / 2 / 3 / 3;
-  align-items: center;
-  margin-bottom: 20px;
-
-  @media (min-width: $viewport-tablet) {
-    width: 250px;
-    row-gap: 12px;
-    margin-bottom: 37px;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    width: 169px;
-    margin-bottom: 42px;
-  }
-}
-
-.products__item-detail {
-  justify-self: end;
-}
-
-.products__item-details-name {
-  position: relative;
-
-  &:nth-of-type(2) {
-    @media (min-width: $viewport-desktop) {
-      padding-bottom: 1px;
-    }
-  }
-
-  &:nth-of-type(3) {
-    @media (min-width: $viewport-desktop) {
-      &::after {
-        top: 30px;
-      }
-    }
-  }
-
-  @media (min-width: $viewport-tablet) {
-    &::after {
-      position: absolute;
-      content: "";
-      top: 25px;
-      left: 0;
-      width: 250px;
-      height: 1px;
-      background-color: #cdcdcd;
-    }
-  }
-
-  @media (min-width: $viewport-desktop) {
-    &::after {
-      width: 169px;
-    }
-  }
-}
-
-.products__more-title {
-  position: relative;
-  margin: 0;
-  padding-top: 60px;
-  margin-bottom: 8px;
-  text-align: center;
-  text-transform: uppercase;
-
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    background-color: #d3d3d3;
-  }
-
-  &::before {
-    width: 30px;
-    height: 2px;
-    top: 20px;
-    left: 85px;
-
-    @media (min-width: $viewport-tablet) {
-      top: 78px;
-      left: 37px;
-      width: 60px;
-    }
-
-    @media (min-width: $viewport-tablet) {
-      top: 80px;
-    }
-  }
-
-  &::after {
-    width: 2px;
-    height: 30px;
-    top: 6px;
-    left: 100px;
-
-    @media (min-width: $viewport-tablet) {
-      top: 50px;
-      left: 67px;
-      height: 60px;
-    }
-  }
-
-  @media (min-width: $viewport-tablet) {
-    padding-top: 157px;
-    margin-bottom: 23px;
-    width: 134px;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    padding-top: 150px;
-    margin-bottom: 26px;
-  }
-}
-
-.products__more-text {
-  margin-bottom: 20px;
-  text-align: center;
-
-  @media (min-width: $viewport-tablet) {
-    line-height: 18px;
-    margin-bottom: 82px;
-    width: 170px;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    margin-bottom: 90px;
-  }
-}
-
-.products__item-wrap {
-  width: 140px;
-  height: 107px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  @media (min-width: $viewport-tablet) {
-    width: 200px;
-    height: 210px;
-  }
-
-  @media (min-width: $viewport-desktop) {
-    width: 169px;
-  }
-}
-
-.products__image {
-  display: block;
 }
